--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -304,8 +304,22 @@
                     <h5>Контакты</h5>
                     <ul class="list-unstyled">
                         <li><i class="fas fa-phone me-2"></i>+7 (993) 450-91-31</li>
-                        <li><i class="fas fa-envelope me-2"></i>neboleyy@yandex.ru</li>
+                        <li>
+                            <a href="mailto:neboleyy@yandex.ru">
+                                <i class="fas fa-envelope me-2"></i>
+                                neboleyy@yandex.ru
+                            </a>
+                        </li>
+
                         <li><i class="fas fa-map-marker-alt me-2"></i>г. Ростов-на-Дону</li>
+                        <li>
+                            <a href="https://t.me/neboley_store" 
+                               target="_blank" 
+                               class="text-decoration-none text-dark hover-text-primary">
+                               <i class="fab fa-telegram-plane me-2"></i>
+                               @neboley_store
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
