--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -15,7 +15,7 @@
                         <img src="{% static 'images/doctor.jpg' %}" alt="Кармиркардиева Алина Мкртычевна" class="doctor-title-photo">
                     </div>
                 </div>
-                <p class="lead mb-4">Врач-эндокринолог высшей категории. Специализируюсь на диагностике и лечении заболеваний эндокринной системы.</p>
+                <p class="lead mb-4">Врач-эндокринолог. Специализируюсь на диагностике и лечении заболеваний эндокринной системы.</p>
                 <div class="d-flex gap-3 flex-wrap">
                     <a href="#contact" class="btn btn-light btn-lg">Записаться на прием</a>
                     <a href="#services" class="btn btn-outline-light btn-lg">Узнать об услугах</a>
@@ -46,13 +46,13 @@
         <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-right">
                 <h2 class="section-title text-start">Обо мне</h2>
-                <p class="lead">Более 15 лет практики в эндокринологии</p>
-                <p>Я специализируюсь на диагностике и лечении заболеваний эндокринной системы, включая сахарный диабет, заболевания щитовидной железы, нарушения обмена веществ и гормональные дисбалансы.</p>
-                <p>Регулярно повышаю квалификацию, участвую в международных конференциях и применяю в практике современные доказательные методы лечения.</p>
+                <p class="lead">Более 5 лет практики в медицине</p>
+                <p>Я специализируюсь на болезнях эндокринной системы, таких как сахарный диабет, заболевания щитовидной железы (тиреоидиты, узловые образования, деструктивные изменения), заболевания надпочечников (инциденталомы, гипо/гиперкортицизм), образования гипофиза, паращитовидных желез (гипо/гиперпаратиреоз), ожирении, нарушении со строны половых гормонов (СПКЯ), веду бесплодие со стороны энокринологии.</p>
+                <p>Регулярно повышаю квалификацию, участвую в конференциях и применяю в практике современные доказательные методы лечения. Стараюсь применять так же интегративный подход в ведении пациентов.</p>
                 <div class="d-flex flex-wrap gap-2 mt-4">
-                    <span class="medical-badge">Кандидат медицинских наук</span>
-                    <span class="medical-badge">Высшая категория</span>
-                    <span class="medical-badge">Стаж 15+ лет</span>
+                    <span class="medical-badge">Врач - эндокринолог,</span>
+                    <!--<span class="medical-badge">Высшая категория</span>-->
+                    <span class="medical-badge">Стаж 5 лет</span>
                 </div>
             </div>
             <div class="col-lg-6" data-aos="fade-left">
@@ -140,7 +140,6 @@
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Резкие изменения веса</li>
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Нарушения сна</li>
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Повышенная потливость</li>
-                        <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Изменения температуры тела</li>
                     </ul>
                 </div>
             </div>
@@ -158,6 +157,9 @@
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Нарушения менструального цикла</li>
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Сердцебиение и дрожь</li>
                         <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Изменения настроения</li>
+                        <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Зуд, отеки периферические</li>
+                        <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Боль в молочных железах</li>
+                        <li class="mb-2"><i class="fas fa-check text-success me-2"></i>Двоение в глазах</li>
                     </ul>
                 </div>
             </div>
