--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -283,7 +283,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Кармиркардиева А.М.</h5>
-                    <p>Врач-эндокринолог высшей категории. Помогаю восстановить гормональное здоровье и улучшить качество жизни.</p>
+                    <p>Врач-эндокринолог. Помогаю восстановить гормональное здоровье и улучшить качество жизни.</p>
                 </div>
                 <div class="col-md-3">
                     <h5 class="text-red mb-3">Документы</h5>
