--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -45,17 +45,26 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-right">
-                <h2 class="section-title text-start">Обо мне</h2>
-                <p class="lead">Более 5 лет практики в медицине</p>
-                <p>Я специализируюсь на болезнях эндокринной системы, таких как сахарный диабет, заболевания щитовидной железы (тиреоидиты, узловые образования, деструктивные изменения), заболевания надпочечников (инциденталомы, гипо/гиперкортицизм), образования гипофиза, паращитовидных желез (гипо/гиперпаратиреоз), ожирении, нарушении со строны половых гормонов (СПКЯ), веду бесплодие со стороны энокринологии.</p>
-                <p>Регулярно повышаю квалификацию, участвую в конференциях и применяю в практике современные доказательные методы лечения. Стараюсь применять так же интегративный подход в ведении пациентов.</p>
-                <div class="d-flex flex-wrap gap-2 mt-4">
+                <h2 class="section-title text-center">Обо мне</h2>
+                <p class="lead text-center">Более 5 лет практики в медицине</p>
+                <p class="text-center">Я специализируюсь на болезнях эндокринной системы, таких как сахарный диабет, заболевания щитовидной железы (тиреоидиты, узловые образования, деструктивные изменения), заболевания надпочечников (инциденталомы, гипо/гиперкортицизм), образования гипофиза, паращитовидных желез (гипо/гиперпаратиреоз), ожирении, нарушении со строны половых гормонов (СПКЯ), веду бесплодие со стороны энокринологии.</p>
+                <p class="text-center">Регулярно повышаю квалификацию, участвую в конференциях и применяю в практике современные доказательные методы лечения. Стараюсь применять так же интегративный подход в ведении пациентов.</p>
+                <div class="d-flex flex-wrap gap-2 mt-4 justify-content-center">
                     <span class="medical-badge">Врач - эндокринолог,</span>
                     <!--<span class="medical-badge">Высшая категория</span>-->
                     <span class="medical-badge">Стаж 5 лет</span>
                 </div>
             </div>
+            
             <div class="col-lg-6" data-aos="fade-left">
+                <div class="text-center">
+                    <img src="{% static 'images/doctor1.jpg' %}" alt="Врач-эндокринолог" class="img-fluid rounded" style="max-height: 500px;">
+                </div>
+            </div>
+
+
+
+                <!--
                 {% for edu in education|slice:":2" %}
                 <div class="education-card">
                     <h5><i class="fas fa-graduation-cap text-primary me-2"></i>{{ edu.degree }}</h5>
@@ -67,6 +76,7 @@
                 </div>
                 {% endfor %}
             </div>
+            -->
         </div>
     </div>
 </section>
