--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -334,11 +334,11 @@
 
                         <li><i class="fas fa-map-marker-alt me-2"></i>г. Ростов-на-Дону</li>
                         <li>
-                            <a href="https://t.me/neboley_store" 
+                            <a href="https://t.me/help_me_pls_doc" 
                                target="_blank" 
                                class="text-decoration-none text-dark hover-text-primary">
                                <i class="fab fa-telegram-plane me-2"></i>
-                               @neboley_store
+                               @help_me_pls_doc
                             </a>
                         </li>
                     </ul>
